--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,3 +22,10 @@ jobs:
 
     - name: Build
       run: go build -v .
+    
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@master
+      with:
+        name: binary
+        path: goproxy
+      
